# ai-ox

./: .gitignore  ARCHITECTURE.md  AUDIO_FEATURES.md  CODE_REVIEW_REPORT.md  Cargo.toml  DANGEROUS_TOOLS_GUIDE.md  HOOKS_USAGE_EXAMPLE.md  JULES_PLAN.md  MIGRATION.md  README.md  VOXTRAL_INTEGRATION.md  debug_mistral.rs  flake.nix  run_all_tests.sh  run_all_tests_working.sh  test.sh  test_dangerous_tools.rs  test_error_behavior.rs  test_mistral_conversion.rs
crates/ai-ox/: Cargo.toml
crates/ai-ox-common/: Cargo.toml  README.md
crates/ai-ox-common/src/: error.rs  lib.rs  openai_format.rs  request_builder.rs  response_format.rs  streaming.rs  timestamp.rs  usage.rs
crates/ai-ox-common/tests/: request_builder.rs
crates/ai-ox/examples/: bash_tool_safe.rs  mistral_chat.rs  stt_groq.rs
crates/ai-ox/src/: errors.rs  lib.rs
crates/ai-ox/src/agent/: error.rs  events.rs  mod.rs
crates/ai-ox/src/content/: delta.rs  gemini.rs  message.rs  mod.rs  part.rs  requests.rs  response.rs
crates/ai-ox/src/conversion/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/ai-ox/src/generate_content/: gemini.rs  mod.rs
crates/ai-ox/src/model/: content.rs  gemini.rs  mod.rs  openrouter.rs  request.rs  response.rs
crates/ai-ox/src/provider/: capabilities.rs  mod.rs  policy.rs
crates/ai-ox/src/stt/: builder.rs  error.rs  mod.rs  request.rs  response.rs  streaming.rs
crates/ai-ox/src/tool/: call.rs  encoding.rs  error.rs  gemini.rs  mod.rs  result.rs  set.rs  types.rs
crates/ai-ox/src/usage/: gemini.rs  mod.rs
crates/ai-ox/src/workflow/: error.rs  graph.rs  mod.rs  node.rs  run_context.rs  tests.rs
crates/ai-ox/tests/: agent.rs  agent_integration.rs  common.rs  conversion_paranoid_tests.rs  critical_bug_tests.rs  lossless_conversion_tests.rs  model_integration.rs  multi_agent_feedback.rs  multi_agent_workflow.rs  multi_provider_roundtrip.rs  provider_compliance.rs  provider_roundtrip_tests.rs  streaming_integration.rs  test_openrouter_structured_fix.rs  toolbox_macro.rs  typed_output_tests.rs
crates/anthropic-ox/: Cargo.toml  IMPLEMENTATION_PLAN.md  debug_json.rs
crates/anthropic-ox/src/: batches.rs  client.rs  error.rs  files.rs  internal.rs  lib.rs  model.rs  models.rs  prelude.rs  request.rs  response.rs  tokens.rs  usage.rs
crates/anthropic-ox/src/admin/: api_keys.rs  invites.rs  mod.rs  usage.rs  users.rs  workspaces.rs
crates/anthropic-ox/src/message/: message.rs  mod.rs
crates/anthropic-ox/src/tool/: mod.rs
crates/anthropic-ox/tests/: admin_api.rs  api_endpoints.rs  batches_api.rs  chat_request_tests.rs  client_tests.rs  experimental_features.rs  files_api.rs  integration.rs  stream_chunk_split.rs  tool_result_deserialization_test.rs
crates/bedrock-ox/: Cargo.toml
crates/bedrock-ox/src/: lib.rs  message.rs  prelude.rs  request.rs  response.rs
crates/bedrock-ox/tests/: integration.rs
crates/conversion-ox/: Cargo.toml  README_anthropic_openai.md
crates/conversion-ox/src/: anthropic_gemini.rs  lib.rs
crates/conversion-ox/src/anthropic_openai/: constants.rs  mod.rs
crates/conversion-ox/src/anthropic_openrouter/: mod.rs  streaming.rs
crates/conversion-ox/tests/: anthropic_openai_integration.rs  anthropic_openrouter_thinking_integration.rs  gpt5_reasoning_clean.rs  openrouter_openai_reasoning_test.rs  roundtrip_paranoid_test.rs  roundtrip_test.rs  schema_conversion_test.rs  thinking_tokens_integration.rs  tool_conversion_tests.rs
crates/conversion-ox/tests/resources/: tool_result_with_cache.json  tool_use_with_cache.json  tool_with_cache.json
crates/gemini-ox/: Cargo.toml
crates/gemini-ox/examples/: live_multimodal_chat.rs  oauth_both_methods.rs  oauth_real_test.rs  oauth_streaming_test.rs  oauth_test.rs  oauth_with_project_test.rs
crates/gemini-ox/src/: internal.rs  lib.rs  prelude.rs  request.rs
crates/gemini-ox/src/agent/: context.rs  error.rs  events.rs  mod.rs  simple_agent.rs  traits.rs  typed_agent.rs
crates/gemini-ox/src/cache/: mod.rs
crates/gemini-ox/src/content/: content.rs  mime_types.rs  mod.rs  part.rs  types.rs
crates/gemini-ox/src/embedding/: mod.rs  request.rs  response.rs
crates/gemini-ox/src/files/: mod.rs
crates/gemini-ox/src/generate_content/: content.rs  mod.rs  request.rs  response.rs  usage.rs
crates/gemini-ox/src/live/: audio_input.rs  live_operation.rs  message_types.rs  mod.rs  request_configs.rs  session.rs  video_input.rs
crates/gemini-ox/src/model/: mod.rs  response.rs
crates/gemini-ox/src/tokens/: mod.rs  request.rs  response.rs
crates/gemini-ox/src/tool/: config.rs  error.rs  google.rs  mod.rs
crates/gemini-ox/tests/: cache.rs  integration.rs  model_api.rs  oauth.rs  response_parsing.rs
crates/groq-ox/: Cargo.toml
crates/groq-ox/src/: error.rs  internal.rs  lib.rs  message.rs  model.rs  request.rs  response.rs  tool.rs  usage.rs
crates/groq-ox/src/audio/: mod.rs  speech.rs  transcription.rs
crates/groq-ox/src/models/: mod.rs  response.rs
crates/groq-ox/tests/: integration.rs  models.rs  response_format_tests.rs
crates/mistral-ox/: Cargo.toml
crates/mistral-ox/src/: audio.rs  client.rs  content.rs  error.rs  internal.rs  lib.rs  message.rs  model.rs  request.rs  response.rs  tool.rs  usage.rs
crates/mistral-ox/tests/: integration.rs  request_builders.rs
crates/openai-ox/: Cargo.toml  README.md
crates/openai-ox/src/: client.rs  error.rs  internal.rs  lib.rs  message.rs  model.rs  request.rs  response.rs  tool.rs  usage.rs
crates/openai-ox/tests/: integration.rs  live_api.rs  o1_reasoning_test.rs  request_builders.rs  responses_api.rs  responses_integration.rs  responses_integration_test.rs  schema.rs  unit.rs
crates/opencode-zen/: Cargo.toml  README.md
crates/opencode-zen/src/: error.rs  internal.rs  lib.rs
crates/openrouter-ox/: Cargo.toml  TODO.md
crates/openrouter-ox/src/: conversion.rs  error.rs  internal.rs  lib.rs  message.rs  models.rs  provider_preference.rs  request.rs  response.rs  router.rs  tool.rs
crates/openrouter-ox/tests/: additional_endpoints.rs  basic_requests.rs  integration.rs  provider_preferences.rs  timestamp_parsing.rs
(+50 files in other folders)
