[package]
name = "ai-ox"
version = "0.1.0"
edition = "2024"

[features]
default = ["gemini"]
gemini = ["dep:gemini-ox"]
openrouter = ["dep:openrouter-ox"]

[dependencies]
serde = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
schemars = { workspace = true }
gemini-ox = { path = "../gemini-ox", optional = true }
openrouter-ox = { path = "../openrouter-ox", optional = true }
tokio = { workspace = true }
chrono = { workspace = true }
bon = { workspace = true }
ai-ox-macros = { path = "../ai-ox-macros" }
async-stream = { workspace = true }
dyn-clone = { workspace = true }

[dev-dependencies]
ai-ox-macros = { path = "../ai-ox-macros" }
schemars = { workspace = true }
futures-util = { workspace = true }
