[package]
name = "ai-ox"
version = "0.1.0"
edition = "2024"

[features]
default = []
gemini = ["dep:gemini-ox"]
openai = ["dep:openai-ox"]
openrouter = ["dep:openrouter-ox"]
mistral = ["dep:mistral-ox"]
groq = ["dep:groq-ox"]
anthropic = ["dep:anthropic-ox"]
bedrock = [
    "dep:aws-config",
    "dep:aws-sdk-bedrockruntime",
    "dep:aws-smithy-types"
]

test = ["gemini", "openai", "openrouter", "mistral", "groq", "anthropic", "bedrock"]

[dependencies]
serde = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
schemars = { workspace = true }
gemini-ox = { path = "../gemini-ox", optional = true }
openrouter-ox = { path = "../openrouter-ox", optional = true }
mistral-ox = { path = "../mistral-ox", optional = true }
groq-ox = { path = "../groq-ox", optional = true }
anthropic-ox = { path = "../anthropic-ox", optional = true }
openai-ox = { path = "../openai-ox", optional = true }
tokio = { workspace = true }
chrono = { workspace = true }
bon = { workspace = true }
strum = { workspace = true }
ai-ox-macros = { path = "../ai-ox-macros" }
ai-ox-common = { path = "../ai-ox-common" }
dyn-clone = { workspace = true }
aws-config = { version = "1.1.7", optional = true }
aws-sdk-bedrockruntime = { version = "1.17.0", optional = true }
aws-smithy-types = { version = "1.1.7", optional = true }
tokio-stream = { version = "0.1.15" }
async-stream = { version = "0.3.5" }
uuid = { version = "1.8.0", features = ["v4"] }
async-trait = { workspace = true }


[dev-dependencies]
ai-ox-macros = { path = "../ai-ox-macros" }
conversion-ox = { path = "../conversion-ox", features = ["all"] }
anthropic-ox = { path = "../anthropic-ox" }
openrouter-ox = { path = "../openrouter-ox" }
gemini-ox = { path = "../gemini-ox" }
ai-ox-common = { path = "../ai-ox-common" }
anyhow = { workspace = true }
futures-util = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true, features = ["full"] }
md5 = "0.7"
