[package]
name = "bedrock-ox"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-ox-common = { path = "../ai-ox-common" }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
