[package]
name = "conversion-ox"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "AI provider format conversions for ai-ox ecosystem"
readme = "README.md"
repository = "https://github.com/ribelo/ai-ox"
categories = ["api-bindings", "asynchronous"]
keywords = ["ai", "conversion", "anthropic", "gemini", "openrouter"]

[features]
default = ["anthropic-gemini"]
# Individual provider conversions
anthropic-gemini = ["dep:anthropic-ox", "dep:gemini-ox"]
# Convenience feature for all conversions
all = ["anthropic-gemini"]

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }

# Provider crates (optional)
anthropic-ox = { path = "../anthropic-ox", optional = true, features = ["full"] }
openrouter-ox = { path = "../openrouter-ox", optional = true }
gemini-ox = { path = "../gemini-ox", optional = true }

[dev-dependencies]
tokio = { workspace = true }