[package]
name = "openai-ox"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "OpenAI AI API client for Rust"
readme = "README.md"
repository = "https://github.com/ribelo/ai-ox"
categories = ["api-bindings", "asynchronous"]
keywords = ["openai", "ai", "api", "client", "async"]

[features]
default = []
leaky-bucket = ["dep:leaky-bucket"]
schema = ["dep:schemars"]

[dependencies]
# Core dependencies - use workspace where possible
async-stream = { workspace = true }
bon = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# Optional dependencies
leaky-bucket = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
ai-ox-common = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
dotenv = "0.15"
wiremock = "0.6"

# Uncomment and customize linting rules as needed
# [lints.clippy]
# pedantic = { level = "warn", priority = -1 }
# unwrap_used = "warn"
# missing_docs = "warn"